Finished page with mobile view

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <div class="img-section">
-        <img class="img" src="images/photo-1515041219749-89347f83291a.jpeg" alt="Photo by Justin Lim on Unsplash">
+        <div class="name-tag">IKEM</div>
+        <div class="photo-tag">Photo by Justin Lim on Unsplash</div>
     </div>
     <div class="form-section">
         <div class="form-header">
             <p class="form-write-up">
-                Ready to make your dream your reality? Come work for our master
-                Gru. We'll make him the greatest villian of all time.
+                Are you in search of a villian boss to serve? Come join the minions and work for our boss
+                Gru. We'll make him the greatest super villian of all time.
             </p>
         </div>
         <!-- <div class="form-body"> -->
